<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusiX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="doubleBackToExit">Please press BACK again to exit.</string>

    <!-- NavigationDrawer Menu -->
    <string name="menu_search">Search</string>
    <string name="menu_songs">Songs</string>
    <string name="menu_artists">Artists</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_fav">Favourites</string>
<!--     <string name="menu_exit">Exit</string> -->

    <!-- Current playing Song Strings -->
    <string name="song_start_time">00:00</string>
    <string name="song_end_time">00:00</string>
    <string name="song_tittle">Title</string>
    <string name="song_artist_name">Artist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_options">Song options</string>
    <string name="song_details">Song Details</string>
    <string name="delete_item">Delete item</string>
    <string name="stop">Stop</string>
    <string name="shuffle">Shuffle</string>
    <string name="cover">Cover</string>

</resources>
